added a logging cog for PISG Might contain some bugs, will need to improve in the future

--- a/example.env
+++ b/example.env
@@ -1,6 +1,19 @@
 # Make sure you rename this file to .env and make your changes there
+
 # Main bot configuration variables
 BOT_TOKEN=""
+
 # Disbump configuration variables
 DISBUMP_ROLE=""
 DISBUMP_CHANNEL=""
+
+# EvilLogBot configuration variables
+# exports logs in muh format. Use "muh" in PISG.
+DB_NAME="" # database name for logs
+LOG_TABLE_NAME="" # table name for logs
+CHANNEL="" # channel to log
+LOG_NAME="" # exported log text file name
+LOG_AGE="30" # in days
+IGNORE_NICKS=""
+MIN_MSG_LEN="2"
+EXPORT_LOG_TIME="6" # in hours, much time to wait before exporting logs
