renamed variable names to be more specific to a module

--- a/example.env
+++ b/example.env
@@ -9,11 +9,12 @@ DISBUMP_CHANNEL=""
 
 # EvilLogBot configuration variables
 # exports logs in muh format. Use "muh" in PISG.
-DB_NAME="" # database name for logs
-LOG_TABLE_NAME="" # table name for logs
-CHANNEL="" # channel to log
-LOG_NAME="" # exported log text file name
-LOG_AGE="30" # in days
-IGNORE_NICKS=""
-MIN_MSG_LEN="2"
-EXPORT_LOG_TIME="6" # in hours, much time to wait before exporting logs
+# none of these can be empty
+ELB_DB_NAME="" # database name for logs
+ELB_LOG_TABLE_NAME="" # table name for logs
+ELB_CHANNEL="" # channel to log
+ELB_LOG_NAME="" # exported log text file name
+ELB_LOG_AGE="30" # in days
+ELB_IGNORE_NICKS=""
+ELB_MIN_MSG_LEN="2"
+ELB_EXPORT_LOG_TIME="6" # in hours, much time to wait before exporting logs
