made an RSS feed watcher for the forum. Can be extended later to watch the blog as well

--- a/example.env
+++ b/example.env
@@ -18,3 +18,9 @@ ELB_LOG_AGE="30" # in days
 ELB_IGNORE_NICKS=""
 ELB_MIN_MSG_LEN="2"
 ELB_EXPORT_LOG_TIME="6" # in hours, much time to wait before exporting logs
+
+# Feeder configuration variables
+FEEDER_CHECK_FREQ="5" # in minutes
+FEEDER_FEED_URL="http://forums.subhackers.org/feed.php"
+FEEDER_CHANNELS="lobby" # where to send, separated with ,
+FEEDER_IGNORE_USERS="NEWS" # users like NEWS to ignore, separated with ,
