--- a/example.env
+++ b/example.env
@@ -9,6 +9,6 @@ DISBUMP_CHANNEL=""
 
 # Feeder configuration variables
 FEEDER_CHECK_FREQ="5" # in minutes
-FEEDER_FEED_URL="http://forums.subhackers.org/feed.php"
-FEEDER_CHANNELS="lobby" # where to send, separated with ,
-FEEDER_IGNORE_USERS="NEWS" # users like NEWS to ignore, separated with ,
+FEEDER_FEED_URL=""
+FEEDER_CHANNELS="" # where to send, separated with ,
+FEEDER_IGNORE_USERS="" # users like NEWS to ignore, separated with ,
