--- a/.gitignore
+++ b/.gitignore
@@ -188,6 +188,9 @@ dmypy.json
 .history
 .ionide
 
+#pycharm
+.idea
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,dotenv,python
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
