--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ importlib-metadata==2.0.0
 isort==5.6.4
 jsonpickle==1.4.1
 lazy-object-proxy==1.4.3
-lxml==4.6.1
+lxml==4.6.2
 mccabe==0.6.1
 mergedeep==1.3.0
 mmh3==2.5.1
@@ -43,4 +43,4 @@ zipp==3.4.0
 emoji==1.2.0
 udpy==2.0.0
 wikipedia-api==0.5.4
-feedparser=6.0.2
+feedparser==6.0.2
